<resources>
    <string name="app_name">TRPAM</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup_login_hint">Already have an account? Log In</string>
    <string name="login_signup_hint">"Don't have an account? Register"</string>
    <string name="error1">Wrong Password!</string>
    <string name="error7">No such user exist!</string>
    <string name="error4">Empty fields are not allowed!</string>
    <string name="error5">Please Enter Correct Email!</string>
    <string name="error6">Register successfully!</string>

    <string name="error2">"Password confirmation doesn't match password!"</string>
    <string name="error3">Password must be at least 8 characters!</string>

    <string name="buy">Buy</string>
    <string name="deposit">Deposit</string>
    <string name="money">Money</string>
    <string name="collection">Collection</string>
    <string name="sell">Sell</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="nominal">Enter Nominal</string>
    <string name="keterangan">Wellcome to NFTOK. This is an application that can be used for buying and selling NFT. In this application you can upload and sell your own NFT work, or you can buy other people work and the NFT becomes your property</string>

    <string name="akun">Account</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="email">E-Mail</string>
    <string name="alamat">Address</string>
    <string name="fullname">Full Name</string>
    <string name="username">Username</string>
    <string name="phone">Phone Number</string>

    <string-array name="berita">
        <item>Biden administration extends immigration relief to Ukrainians in the US</item>
        <item>President of Georgia on Ukraine crisis: It looks like Putin is destroying the "whole country"</item>
        <item>US military establishes communications line with Russia to avoid any incidents near Ukraine</item>
    </string-array>
    <string-array name="isi">
        <item> The relief – known as Temporary Protected Status, or TPS – applies to people who would face extreme hardship if they were forced to return to homelands devastated by armed conflict or natural disasters. </item>
        <item> He was not planning on the way Ukraine is resisting. He had a mass assault that was very psychological with his forces that were used from all sides. And it has not worked.</item>
        <item> The US and Russia have established communications channel where the two sides can notify each other of any potential operations that may be in close proximity to avoid any possible miscalculations near Ukraine.</item>
    </string-array>
    <string-array name="gambar">
        <item>a1</item>
        <item>a2</item>
        <item>a3</item>
    </string-array>

</resources>