<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".Uang">

    <TextView
        style="@style/texthijau"
        android:layout_marginTop="24dp"
        android:text="@string/money" />

    <LinearLayout
        style="@style/form"
        android:layout_width="380dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/whiteCardColor"
        android:backgroundTint="#77E4D4"
        android:elevation="15dp"
        android:padding="20dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/jumlahuang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="Rp. "
            android:textSize="20dp" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/sama"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/isiuang"
                style="@style/input"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/nominal"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/tombolisi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/deposit"
        android:textColor="@color/white"
        app:cornerRadius="70dp" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/home"
        app:cornerRadius="70dp" />

</LinearLayout>
