<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".Home">

    <LinearLayout
        style="@style/form"
        android:layout_height="match_parent"
        android:layout_gravity="top">


        <TextView
            style="@style/texthijau"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/akun" />

        <LinearLayout
            style="@style/form"
            android:layout_width="380dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/whiteCardColor"
            android:backgroundTint="#BCECE4"
            android:elevation="15dp"
            android:padding="20dp"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/username1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="Username : "
                android:textSize="20dp" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/sama"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <EditText
                    android:id="@+id/editnomor"
                    style="@style/input"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/sama"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <EditText
                    android:id="@+id/editemail"
                    style="@style/input"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/sama"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <EditText
                    android:id="@+id/editpassword"
                    style="@style/input"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:hint="@string/login_password_hint"
                    android:inputType="text"
                    android:maxLines="1" />


            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="38dp"
            android:background="@drawable/btn_bg"
            android:text="@string/update"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>
