<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    tools:context=".About">

    <LinearLayout
        style="@style/form"
        android:layout_height="603dp"
        android:layout_gravity="center"
        android:background="@drawable/input_line">

        <TextView
            style="@style/texthijau"
            android:layout_marginTop="30dp"
            android:text="@string/about" />

        <LinearLayout
            style="@style/form"
            android:layout_width="380dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:background="@color/whiteCardColor"
            android:backgroundTint="@color/rect1"
            android:elevation="15dp"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/keterangan"
                android:textAlignment="center"
                android:textSize="18dp" />
        </LinearLayout>

        <TextView
            style="@style/texthijau"
            android:layout_marginTop="20dp"
            android:text="@string/email" />

        <LinearLayout
            style="@style/form"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:background="@color/whiteCardColor"
            android:backgroundTint="@color/rect3"
            android:elevation="15dp"
            android:padding="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="nftok@gmail.com"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17dp" />
        </LinearLayout>

        <TextView
            style="@style/texthijau"
            android:layout_marginTop="30dp"
            android:text="@string/phone" />

        <LinearLayout
            style="@style/form"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:background="@color/whiteCardColor"
            android:backgroundTint="@color/rect5"
            android:elevation="15dp"
            android:padding="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="08123456789"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp" />
        </LinearLayout>

        <TextView
            style="@style/texthijau"
            android:layout_marginTop="30dp"
            android:text="@string/alamat" />

        <LinearLayout
            style="@style/form"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:background="@color/whiteCardColor"
            android:backgroundTint="@color/rect6"
            android:elevation="15dp"
            android:padding="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="Salatiga, Jawa Tengah, Indonesia"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
